--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <style></style>
+<link rel="stylesheet" type="text/css" href="style.css">
     <script></script>
 </head>
 <body>
 <section>
     <div>
         <p>lorem</p>
-        <p> Hello !</p>
+        <p> Hello!</p>
     </div>
 </section>
 <section>
@@ -25,3 +25,5 @@
 </section>
 </body>
 </html>
+
+
