--- a/public/index.html
+++ b/public/index.html
@@ -3,24 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-<link rel="stylesheet" type="text/css" href="style.css">
-    <script></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script type="text/javascript" src="script.js"></script>
 </head>
 <body>
 <section>
-    <div>
-        <p>lorem</p>
-        <p> Hello!</p>
-    </div>
-</section>
-<section>
-    <div>
-        <p>lorem</p>
-    </div>
-</section>
-<section>
-    <div>
-        <p>lorem</p>
+    <div class="clock">
+        <span id="hr">00</span>
+        <span> : </span>
+        <span id="min">00</span>
+        <span> : </span>
+        <span id="sec">00</span>
     </div>
 </section>
 </body>
